tests/rustdoc-ui/private-type-cycle-dyn-110629.stderr
error[E0391]: cycle detected when expanding type alias `Bar`
  --> $DIR/private-type-cycle-dyn-110629.rs:3:38
   |
LL | type Bar<'a, 'b> = Box<dyn PartialEq<Bar<'a, 'b>>>;
   |                                      ^^^^^^^^^^^
   |
   = note: ...which immediately requires expanding type alias `Bar` again
   = note: type aliases cannot be recursive
   = help: consider using a struct, enum, or union instead to break the cycle
   = help: see <https://doc.rust-lang.org/reference/types.html#recursive-types> for more information
note: cycle used when checking that `Bar` is well-formed
  --> $DIR/private-type-cycle-dyn-110629.rs:3:1
   |
LL | type Bar<'a, 'b> = Box<dyn PartialEq<Bar<'a, 'b>>>;
   | ^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
